--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,9 +24,11 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 31
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -39,12 +41,13 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.shop_app"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders.appName = "shop_app $flutterVersionName"
     }
-    
+
     signingConfigs {
        debug {
             storeFile file("$rootDir/key.jks")
@@ -55,9 +58,12 @@ android {
     }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            setProperty("archivesBaseName", "shop_app-a." + flutterVersionName)
+        }
+        debug {
+            signingConfig signingConfigs.debug
+            setProperty("archivesBaseName", "shop_app-a." + flutterVersionName)
         }
     }
 }
