--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.0.1+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -30,11 +30,58 @@ dependencies:
   # if you are using latest flutter please update your flutter_svg package to ^0.18.*
   flutter_svg: ^0.22.0 # help us to use SVG in our app
   provider: ^6.0.0 # for State management
+  flutter_facebook_auth: ^3.5.2
+  path: ^1.8.0
+  flutter_multi_formatter: ^2.3.8
+  cached_network_image: ^3.1.0
+  get: ^4.6.1
+  shared_preferences: ^2.0.6
+  another_flushbar: ^1.10.24
+  flutter_local_notifications: ^8.1.1+1
+  firebase_core: ^1.7.0
+  cloud_firestore: ^2.5.0
+  email_validator: ^2.0.1
+  pull_to_refresh: ^2.0.0
+  firebase_auth: ^3.0.2
+  firebase_remote_config: ^0.10.0+4
+  firebase_storage: ^10.0.4
+  firebase_dynamic_links: ^4.0.2
+  image_picker: ^0.8.3+3
+  custom_refresh_indicator: ^1.0.0
+  expandable: ^5.0.1
+  move_to_background: ^1.0.2
+  modal_bottom_sheet: ^2.0.0
+  uuid: ^3.0.4
+  google_sign_in: ^5.1.0
+  firebase_crashlytics: ^2.2.1
+  flutter_card_scanner_latest: ^1.0.5
+  firebase_auth_mocks: ^0.8.1
+  flutter_native_splash: ^1.3.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  #  image_path: "assets/images/icon-128x128.png"
+  image_path_android: "assets/images/logo.png"
+  image_path_ios: "assets/images/logo.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  #adaptive_icon_background: "assets/images/christmas-background.png" # only available for Android 8.0 devices and above
+ # adaptive_icon_foreground: "assets/images/icon-foreground-432x432.png" # only available for Android 8.0 devices and above
+  
+
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter.
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/icons/shopapp_logo.png"
+  android: true
+  ios: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
