--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 31
@@ -42,20 +41,20 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.shop_app"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         manifestPlaceholders.appName = "shop_app $flutterVersionName"
     }
 
-    signingConfigs {
-       debug {
-            storeFile file("$rootDir/key.jks")
-            storePassword "123456abc"
-            keyAlias "key0"
-            keyPassword "123456abc"
-       }
-    }
+    //signingConfigs {
+    //   debug {
+    //        storeFile file("$rootDir/key.jks")
+    //        storePassword "123456abc"
+    //        keyAlias "key0"
+    //        keyPassword "123456abc"
+    //   }
+    //}
     buildTypes {
         release {
             signingConfig signingConfigs.debug
@@ -74,4 +73,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-analytics'
 }
